# single-click-with-sam

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pixeltable_status.py  pyproject.toml  sam_prediction_visualization.py  single_click_with_sam.py
.github/workflows/: test.yml
config/: config.yaml
config/dataset/: deepglobe_roadextraction.yaml  kpi_task1.yaml  mvtec_ad.yaml  plantseg.yaml
config/hydra/sweeper/params/: deepglobe_roadextraction.yaml  mvtec_ad.yaml  plantseg_and_kpi.yaml
run/: deepglobe_roadextraction.sh  mvtec_ad.sh  plantseg_and_kpi.sh
src/: compute.py  data.py  logging.py  model.py  pixeltable_compute.py  pixeltable_udf.py  utils.py
tests/: test_compute.py  test_data.py  test_model.py  test_utils.py
tools/: pxt_mypy_plugin.py
